# rust-ckb-contract

./: Cargo.toml  README.md
src/: checksignall.rs  main.rs
